--- a/recipes/egusi-soup.html
+++ b/recipes/egusi-soup.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Egusi Soup</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/egusi-soup.html">Egusi Soup</a>
+    <h1>Egusi Soup</h1>
 </body>
 </html>
