Add content to Egusi Soup page

--- a/recipes/egusi-soup.html
+++ b/recipes/egusi-soup.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     <h1>Egusi Soup</h1>
+    <img src="../images/egusi-soup.jpg" alt="Egusi Soup" height="300px" width="300px">
+    <h2>Description</h2>
+    <p></p>
+    <p></p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>20 millilitres of Palm Oil</li>
+        <li>1 Bulb of Onions</li>
+        <li>10 Fresh Peppers</li>
+        <li>2 Cups of Egusi</li>
+        <li></li>
+    </ul>
+    <h2>Steps</h2>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </body>
 </html>
