--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/egusi-soup.html">Egusi Soup</a>
+    <ul>
+        <li><a href="recipes/egusi-soup.html">Egusi Soup</a></li>
+        <li><a href="#">Recipe Title 2</a></li>
+        <li><a href="#">Recipe Title 3</a></li>
+      </ul>
+    
 </body>
 </html>
